@@ -4,5 +4,11 @@
 		<ant antfile="${main.buildfile}" target="dep">
 			<property name="module" value="karajan"/>
 		</ant>
+		<ant antfile="${main.buildfile}" target="dep">
+			<property name="module" value="provider-localscheduler"/>
+		</ant>
+		<ant antfile="${main.buildfile}" target="dep">
+			<property name="module" value="provider-dcache"/>
+		</ant>
 	</target>
 </project>
